# Sync-V

./: .gitignore  CONTEXT.md  DESIGN.md  IMPROVEMENTS.md  USER_GUIDE.md  demo-ingest.sh  docker-compose.yml  railway.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .railwayignore  Dockerfile  docker-entrypoint.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/__tests__/: aiRoutes.test.ts  anomalyDetection.test.ts  apiKey.test.ts  auditLog.test.ts  auditService.test.ts  auth.test.ts  cluster.test.ts  clusterRoutes.test.ts  concurrent.test.ts  dashboard-ui-smoke.test.ts  dashboard.test.ts  database-schema.test.ts  deviceHealth.test.ts  deviceKey.test.ts  devices.test.ts  encryption.test.ts  firmware.test.ts  logIngestion.test.ts  logSummary.test.ts  logs.test.ts  model-coverage.test.ts  orgIsolation.test.ts  orgRoutes.test.ts  organization.test.ts  platformDashboard.test.ts  platformRoutes.test.ts  quotaService.test.ts  rate-limiter-stress.test.ts  routes-extended.test.ts  routes.test.ts  scheduler.test.ts  validation.test.ts  webSocket.test.ts  webhook.test.ts  webhookDispatcher.test.ts
backend/docs/: platform-plan.md
backend/src/: index.ts  seed.ts
backend/src/middleware/: auth.ts  authMiddleware.ts
backend/src/models/: Anomaly.ts  ApiKey.ts  AuditLog.ts  Cluster.ts  Database.ts  Device.ts  DeviceHealth.ts  DeviceKey.ts  Firmware.ts  Log.ts  Organization.ts  User.ts  Webhook.ts
backend/src/public/: ai.html  api-keys.html  audit.html  clusters.html  device-detail.html  devices.html  firmware.html  index.html  log-viewer.html  logs.html  overview.html  team.html  usage.html  webhooks.html
backend/src/routes/: ai.ts  auth.ts  clusters.ts  dashboard.ts  devices.ts  firmware.ts  logs.ts  org.ts  platform.ts
backend/src/services/: AnomalyDetectionService.ts  (+12 more)
drive/: CMakeLists.txt  DEPLOY.md  Dockerfile  Dockerfile.pi
drive/cmake/: arm-linux-gnueabihf.cmake
drive/deploy/: setup-pi.sh  syncv-drive.service
drive/src/: EncryptedStorage.cpp  EncryptedStorage.h  FirmwareReceiver.cpp  FirmwareReceiver.h  HashVerifier.cpp  HashVerifier.h  LogCollector.cpp  LogCollector.h  MetadataExtractor.cpp  MetadataExtractor.h  TransferManager.cpp  TransferManager.h  UsbGadget.cpp  UsbGadget.h  WiFiServer.cpp  WiFiServer.h  main.cpp
drive/tests/: test_encrypted_storage.cpp  test_firmware_receiver.cpp  test_hash_verifier.cpp  test_log_collector.cpp  test_metadata_extractor.cpp  test_transfer_manager.cpp  test_usb_gadget.cpp  test_wifi_server.cpp
integration/: package-lock.json  package.json  tsconfig.json
integration/tests/: corrupted_data_e2e.test.ts  device_simulation_e2e.test.ts  device_simulator.ts  failure_simulation.test.ts  firmware_e2e.test.ts  full_simulation_e2e.test.ts  mobile_cloud.test.ts  mobile_drive.test.ts
mobile/: App.tsx  Dockerfile  app.json  eas.json  jest.config.js  package-lock.json  package.json  tsconfig.json
mobile/__mocks__/: expo-file-system.ts  expo-secure-store.ts  react-native-wifi-reborn.ts  react-native.ts
mobile/__tests__/: coverage-gaps.test.ts  crypto.test.ts  driveComm.test.ts  driveCommReal.test.ts  driveMonitoring.test.ts  firmwareUpdate.test.ts  logsUpload.test.ts  network.test.ts  parsers.test.ts  secureStore.test.ts  wifiService.test.ts
mobile/android/: settings.gradle
mobile/docs/: security-flow.puml  security-threats.puml  system-architecture.puml
mobile/src/: config.ts
(+42 files in other folders)
